fix: dark mode of chest

--- a/src/components/PearlChestsLockup/styles.scss
+++ b/src/components/PearlChestsLockup/styles.scss
@@ -151,6 +151,8 @@
 
   &__select-btn.transaction-button {
     min-width: 0 !important;
+    width: 100%;
+    margin: 0 !important;
   }
 
   @media screen and (max-width: 768px) {
@@ -162,7 +164,7 @@
     height: 64px;
     align-items: center;
     justify-content: center;
-    background-color: $light-gray100;
+    // background-color: $light-gray100;
     border-radius: 8px;
     gap: 5px;
     margin-bottom: 15px;
@@ -182,9 +184,8 @@
       font-size: 12px;
     }
 
-    &__value {
-      color: $clam-pink;
-      font-size: 16px;
-    }
+    // &__value {
+    //   font-size: 16px;
+    // }
   }
 }
